--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.2.1",
+    "react-router-dom": "^6.25.1",
     "react-use": "^17.5.0",
     "yup": "^1.4.0"
   },
